--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     compile("org.springframework:spring-context:4.1.6.RELEASE")
     implementation 'com.google.code.gson:gson:2.8.9'
     compile 'org.reflections:reflections:0.9.11'
+    implementation 'javax.inject:javax.inject:1'
 }
