--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.projectlombok:lombok:1.18.20'
+    implementation 'org.projectlombok:lombok:1.18.20'
+    implementation 'org.jetbrains:annotations:20.1.0'
+    implementation 'org.jetbrains:annotations:20.1.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile("org.springframework:spring-context:4.1.6.RELEASE")
     implementation 'com.google.code.gson:gson:2.8.9'
