--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.20'
     implementation 'org.jetbrains:annotations:20.1.0'
     implementation 'org.jetbrains:annotations:20.1.0'
+    implementation 'junit:junit:4.13.1'
+    implementation 'junit:junit:4.13.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile("org.springframework:spring-context:4.1.6.RELEASE")
     implementation 'com.google.code.gson:gson:2.8.9'
